<resources>
<string name="table_title_rad">Avg. En. [keV] ANDInt. % AND Decay En. [keV]  AND Decay En. [keV] AND En. [keV]  </string>
<string name="radiative_capture">Radiative capture</string>
<string name="fission">"Fission"</string>
<string name="absorption">"Absorption"</string>
<string name="n_fission">"(n,fission)"</string>
<string name="about_prefix">Developed at the IAEA Nuclear Data Section</string>
<string name="abundance">Ab.</string>
<string name="abundance_lbl">Abundance</string>
<string name="and">" and "</string>
<string name="app_name">Isotope Browser</string>
<string name="a_prompt">  A</string>
<string name="avg_en">"Avg En[keV]"</string>
<string name="mass_excess">Mass excess</string>
<string name="binding_energy">Binding energy</string>
<string name="between">" between "</string>
<string name="btn_search_label">Go</string>
<string name="charge_rad">Charge radius</string>
<string name="chart_decay_lbl_alpha" translatable="false">α</string>
<string name="chart_decay_lbl_beta" translatable="false">β-</string>
<string name="chart_decay_lbl_ec" translatable="false">EC</string>
<string name="chart_decay_lbl_ecbp" translatable="false">EC,β+</string>
<string name="chart_decay_lbl_p" translatable="false">p</string>
<string name="chart_decay_lbl_n" translatable="false">n</string>
<string name="chart_decay_lbl_sf" translatable="false">SF</string>
<string name="chart_prompt">Chart</string>
<string name="choose_dec">" Choose a decay type "</string>
<string name="choose_rad">" Choose a radiation type "</string>
<string name="cum_ther_fy">Cumulative thermal n FY</string>
<string name="decay">decay</string>
<string name="decays">Decays</string>
<string name="decaychain">decay chain </string>
<string name="decaychain_prompt"  translatable="false">search in decay chain </string>
<string name="decay_constant"  translatable="false">Decay const. </string>
<string name="decay_modes" translatable="false">"\u03B1,
β+ / ec ,
β- ,
γ (isom. trans.),
p,
n,
SF,
β-  n,
β- 2n,
β- 3n,
β- 4n,
β+ /ec p,
β+ /ec 2p"
</string>
<string name="decay_prompt">Decay mode</string>
<string name="decay_rad">Decay radiations</string>
<string name="electric_mom">Electric Moment</string>
<string name="elements_alpha_prompt">Sort by name</string>
<string name="elements_prompt">Element</string>
<string name="elements_symbol" translatable="false">"n,H,He,Li,Be,B,C,N,O,
F,Ne,Na,Mg,Al,Si,P,S,Cl,Ar,K,Ca,
Sc,Ti,V,Cr,Mn,Fe,Co,Ni,Cu,Zn,Ga,
Ge,As,Se,Br,Kr,Rb,Sr,Y,Zr,Nb,Mo,
Tc,Ru,Rh,Pd,Ag,Cd,In,Sn,Sb,Te,I,
Xe,Cs,Ba,La,Ce,Pr,Nd,Pm,Sm,Eu,Gd,
Tb,Dy,Ho,Er,Tm,Yb,Lu,Hf,Ta,W,Re,
Os,Ir,Pt,Au,Hg,Tl,Pb,Bi,Po,At,Rn,
Fr,Ra,Ac,Th,Pa,U,Np,Pu,Am,Cm,Bk,Cf,
Es,Fm,Md,No,Lr,Rf,Db,Sg,Bh,Hs,Mt,Ds,
Rg,Cn,Nh,Fl,Mc,Lv,Ts,Og"</string>
<string name="elements_names">"Neutron,
Hydrogen,
Helium,
Lithium,
Beryllium,
Boron,
Carbon,
Nitrogen,
Oxygen,
Fluorine,
Neon,
Sodium,
Magnesium,
Aluminium,
Silicon,
Phosphorus,
Sulfur,
Chlorine,
Argon,
Potassium,
Calcium,
Scandium,
Titanium,
Vanadium,
Chromium,
Manganese,
Iron,
Cobalt,
Nickel,
Copper,
Zinc,
Gallium,
Germanium,
Arsenic,
Selenium,
Bromine,
Krypton,
Rubidium,
Strontium,
Yttrium,
Zirconium,
Niobium,
Molybdenum,
Technetium,
Ruthenium,
Rhodium,
Palladium,
Silver,
Cadmium,
Indium,
Tin,
Antimony,
Tellurium,
Iodine,
Xenon,
Caesium,
Barium,
Lanthanum,
Cerium,
Praseodymium,
Neodymium,
Promethium,
Samarium,
Europium,
Gadolinium,
Terbium,
Dysprosium,
Holmium,
Erbium,
Thulium,
Ytterbium,
Lutetium,
Hafnium,
Tantalum,
Tungsten,
Rhenium,
Osmium,
Iridium,
Platinum,
Gold,
Mercury,
Thallium,
Lead,
Bismuth,
Polonium,
Astatine,
Radon,
Francium,
Radium,
Actinium,
Thorium,
Protactinium,
Uranium,
Neptunium,
Plutonium,
Americium,
Curium,
Berkelium,
Californium,
Einsteinium,
Fermium,
Mendelevium,
Nobelium,
Lawrencium,
Rutherfordium,
Dubnium,
Seaborgium,
Bohrium,
Hassium,
Meitnerium,
Darmstadtium,
Roentgenium,
Copernicium,
Nihonium,
Flerovium,
Moscovium,
Livermorium,
Tennessine,
Oganesson
Ununennium,
Unbinilium"</string>
<string name="element_groups">"Alkaline Metals,Alkaline Earth Metals,Transition Metals,Post Transition Metals,Metalloid,Other non-Metals,Halogens,Noble Gases,Lanthanides,Actinides"</string>
<string name="email_contact" translatable="false">nds.contact-point@iaea.org</string>
<string name="email_subject" translatable="false">Isotope Browser</string>
<string name="error_report_title" translatable="false"> Error report </string>
<string name="error_report" translatable="false">There has been an error, sorry. \n A debug text has been put in the clipboard, please paste it in an email to nds.contact-point@iaea.org. It would be of great help </string>
<string name="from">"From"</string>
<string name="feedback">"Feedback"</string>
<string name="half_life">"Half-life "</string>
<string name="half_life_prompt" translatable="false">&lt;T&#189;&lt;</string>
<string name="half_life_units">"ps,ns,µ s,ms,s,m,h,d,Y"</string>
<string name="half_life_unit_prompt">Unit</string>
<string name="hundred_prompt" translatable="false">100</string>
<string name="iaeands">"IAEA Nuclear Data Section"</string>
<string name="jplike">" J\u03C0 like "</string>
<string name="jp_prompt" translatable="false">  J\u03C0</string>
<string name="label_prefs">Settings</string>
<string name="label_token" translatable="false">^</string>
<string name="left_pad" translatable="false">    </string>
<string name="lblAdvSearch">Expert</string>
<string name="lblClear">Clear</string>
<string name="lblHelp">Help</string>
<string name="lbl_message_wait">Please Wait</string>
<string name="lblSearchDecRad">Decay and Main Radiations</string>
<string name="list_item_height" translatable="false">80dp</string>
<string name="load_data_title">Loading</string>
<string name="load_db_title"  translatable="false">One-off database loading</string>
<string name="load_db"  translatable="false">LOAD DATABASE</string>
<string name="link_ensdf" translatable="false">"<a href="http://www-nds.iaea.org/ensdf">Evaluated Nuclear Structure Data Files</a>"</string>
<string name="link_ame" translatable="false">"<a href="http://amdc.impcas.ac.cn/evaluation/data2016/ame.html">Atomic Mass Evaluation 2016</a>"</string>
<string name="link_abundance" translatable="false">"<a href="http://amdc.impcas.ac.cn/evaluation/data2012/nubase.html">Nubase 2012</a>"</string>
<string name="link_thermal_cs" translatable="false">"<a href="http://www-nds.iaea.org//relnsd/NdsEnsdf/neutroncs.html">Livechart</a>"</string>
<string name="link_westcott" translatable="false"><a href="http://www-nds.iaea.org/publications/indc/indc-nds-0440/">INDC-NDS-0440</a>"</string>
<string name="link_radius" translatable="false">"<a href="http://dx.doi.org/10.1016/j.adt.2011.12.006">ADNDT 99 (2013)</a>"</string>
<string name="magnetic_mom">Magnetic moment</string>
<string name="main">Main</string>
<string name="mass">Mass</string>
<string name="mean_square">"mean square"</string>
<string name="more_about">"&#149; More about this nuclide on &lt;a href=> NDS web &lt;/a>  &lt;br&gt;&#149; <b>Uncertainty</b> example: 12.3 (11) means 12.3 &#177;1.1 &lt;br>&#149; Refer to the <b>Guide</b> for the meaning of the data"</string>
<string name="msg_nobranching">No established decay</string>
<string name="n_prompt">  N</string>
<string name="new_in_ib"> "New in the Isotope Browser"</string>
<string name="nds_tag">"<b>Provided by the\nIAEA Nuclear Data Section</b>"</string>
<string name="no_results">"&lt;b>No nuclides found&lt;/b> for " </string>
<string name="no_results_warning"  translatable="false">"&lt;br> ****** &lt;br> If you see this message : Please close the app and start it again. We are sorry for the incovenience, we are investigating the problem "</string>
<string name="no_radiations"  translatable="false">" No relevant  "</string>
<string name="nuc_input_help" translatable="false">9C-C-6-*</string>
<string name="nuclide">" Nuclide "</string>
<string name="nuclide_jsp" translatable="false">https://www-nds.iaea.org/relnsd/vcharthtml/VChartHTML.html#\&amp;showtype=2\&amp;lastnuc=</string>
<string name="orderby">" order by "</string>
<string name="ordering">ordering</string>
<string name="parents">Parents</string>
<string name="perc_decay" translatable="false">&lt; % &lt;</string>
<string name="preferences">Preferences</string>
<string name="pref_nuclides_orderby">Nuclides list ordering</string>
<string name="pref_value_orderbyzandn">Z and N</string>
<string name="pref_value_orderbynandz">N and Z</string>
<string name="pref_value_orderbyhalflife">Half-life</string>
<string name="pref_radiation_orderby">Decay Radiation ordering</string>
<string name="pref_radiation_display" translatable="false">Decay Radiation filter</string>
<string name="pref_radiation_display_mode" translatable="false">show only selected type </string>
<string name="pref_value_orderbyenergy">Energy</string>
<string name="pref_value_orderbyintensity">Intensity</string>
<string name="pref_language">Languages</string>
<string name="pref_value_english" translatable="false">English</string>
<string name="pref_value_arabic" translatable="false">العربية</string>
<string name="pref_value_german" translatable="false">Deutsch</string>
<string name="pref_value_spanish" translatable="false">Español</string>
<string name="pref_value_italian" translatable="false">Italiano</string>
<string name="pref_value_japanese" translatable="false">日本語</string>
<string name="pref_value_russian" translatable="false">Русский</string>
<string name="pref_value_slovenian" translatable="false">Slovenščina</string>
<string name="pref_value_chinese" translatable="false">简体中文</string>
<string name="pref_value_chineseTraditional" translatable="false">繁体中文</string>
<string name="pref_value_french" translatable="false">Français</string>
<string name="pref_value_dutch" translatable="false">Nederlands</string>
<string name="pref_decaychain">Decay chain display</string>
<string name="pref_value_showparents">Show all parents</string>
<string name="radiations" translatable="false">"α,β+,β-,γ+X+Annhi.,γ,X,Annihi., Auger,Conv.El. "</string>
<string name="radiation_energy" translatable="false">&lt;keV&lt;</string>
<string name="radiation_energy_lbl">" Radiation energy "</string>
<string name="radiationfiltered" translatable="false">"red: lines matching filter criteria "</string>
<string name="Radiation_prompt">Decay Rad.</string>
<string name="read">dismiss</string>
<string name="resonance_int">Resonance integral</string>
<string name="result_list">"Result list"</string>
<plurals name="search_results">
<item quantity="one">%1$d nuclide for \"%2$s\": </item>
<item quantity="other">%1$d nuclides for \"%2$s\": </item>
</plurals>
<string name="see_the">see the</string>
<string name="specific_activity">Specific act. </string>
<string name="specific_activity_cig"  translatable="false">Ci/g</string>
<string name="specific_activity_bqg"  translatable="false">Bq/g </string>
<string name="stable_prompt">Stable</string>
<string name="tentative">ENSDF evaluation marked as \"Tentative\"</string>
<string name="ther_n_capt">Thermal neutron cross sections</string>
<string name="unknown" translatable="false">"?"</string>
<string name="uncertain">Uncertain</string>
<string name="uraniumTentative">"Isotope indirectly found in the debris of a\nthermonuclear test made in 1952 "</string>
<string name="warn_no_input">You need to input at least one parameter</string>
<string name="warning">Warning</string>
<string name="warning_load_db" translatable="false">"\n\n* WARNING *\nThere will be a few second delay whilst the new database is loading"</string>
<string name="whatsnew" translatable="false">"More options to filter the decay radiation type in the Expert panel"
</string>
<string name="whatsnew_versioncode" translatable="false">148</string>
<string name="width">Width</string>
<string name="z_prompt">  Z</string>
<string name="zero_prompt" translatable="false">0</string>
</resources>